# isc_105_p1rosleiry

./: CMakeLists.txt  primerpunto  puntotres  segundopunto  zNOTA  zcuartopunto
punto1/: punto1Lib.c  punto1Lib.h  punto1Main.c  punto1MinUnit.c
punto2/: punto2Lib.c  punto2Lib.h  punto2Main.c  punto2MinUnit.c
punto3/: punto3Lib.c  punto3Lib.h  punto3Main.c  punto3MinUnit.c
punto4/: punto4Lib.c  punto4Lib.h  punto4Main.c  punto4MinUnit.c
punto5/: punto5Lib.c  punto5Lib.h  punto5Main.c  punto5MinUnit.c
punto6Bono/: bonoMain.c
